# dormammu

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.ko.md  README.md  feature_list.json  pyproject.toml
dormammu/: .env.example  .gitignore  CLAUDE.md  README.ko.md  README.md  pyproject.toml
dormammu/.claude-plugin/: marketplace.json  plugin.json
dormammu/.claude/commands/: dormammu-deepen.md  dormammu-help.md  dormammu-imagine.md  dormammu-research.md  dormammu-simulate.md  dormammu-slides.md  dormammu-status.md  dormammu-viewer.md
dormammu/agents/: agent-decision.md  character-designer.md  character-validator.md  hypothesis-generator.md  interaction-resolver.md  narrator.md  node-evaluator.md  novelist.md  researcher.md  scene-illustrator.md  world-builder.md
dormammu/data/research/: 0cc25c2a-fd50-47dd-98d4-cde8c6edfc68.json  29e0b30e-706d-4852-9954-232b475b8d47.json
dormammu/docs/: claude-code-plugin-patterns.md  emergent-garden-reference.md  ideal-data-mockup-v2.json  ideal-data-mockup.json  inzoi-reference.md  player-motivation-research.md  project-overview.md  service-plan.md  westworld-reference.md  why-dormammu.md
dormammu/docs/mockup/: 01-background-research.md  03-character-profiles.md  05-deepen-best-path-part2.md  07-best-path-metadata.md  17-replayable-session.json  tree-index.json
dormammu/scripts/: deepen-best-path.md  dormammu-dfs.sh  node-evaluate.md  node-expand.md  node-generate.md  process-one-node.md  test-heartbeat.sh
dormammu/seeds/: research-driven-simulation.yaml
dormammu/viewer/: README.md  index.html  serve.py
scripts/: dev.ps1  (+1 more)
(+220 files in other folders)
