[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dormammu"
version = "0.1.0"
description = "What-If Fiction Simulator — explore alternate timelines in fictional universes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gmuffiness" }]

dependencies = [
    "openai>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "sqlite-utils>=3.35.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dormammu = "ese.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ese"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
