[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dormammu"
version = "0.2.0"
description = "What-If Fiction Simulator — Claude Code native skill harness for exploring alternate timelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gmuffiness" }]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dormammu"]
